--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -28,6 +28,7 @@ $grey: #414141;
                 ul {
                     display: flex;
                     justify-content: center;
+                    flex-wrap: wrap
                 }
                 li {
                     list-style: none;
