--- a/css/news.css
+++ b/css/news.css
@@ -1,6 +1,6 @@
 .news {
   background: url(../img/slider_block/layer_1.jpg) no-repeat center/cover;
-  height: 590px;
+  height: 655px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13,6 +13,7 @@
 }
 
 .news_slider {
+  margin-top: 65px;
   max-width: 100%;
 }
 
