--- a/scss/news.scss
+++ b/scss/news.scss
@@ -3,11 +3,12 @@ $grey: #414141;
 .news {
     background: url(../img/slider_block/layer_1.jpg) no-repeat center / cover;
     //  background-size: cover;
-    height: 590px;
+    height: 655px;
     display: flex;
     justify-content: center;
     align-items: center;
     &_slider {
+        margin-top: 65px;
         max-width: 100%;
         &_blocks {
             // display: flex;
