--- a/scss/team.scss
+++ b/scss/team.scss
@@ -32,7 +32,7 @@ $grey2:#6f6e6c;
                     img {
                         height: 100%;
                         width: 100%;
-                        object-fit: contain;
+                        object-fit: cover;
                     }
                 }
                 &_text {
@@ -46,15 +46,13 @@ $grey2:#6f6e6c;
                         text-transform: none;
                         color: #000;
                     }
-                    p {
-                        font-size: 15px;
-                    }
-                    p:last-child {
-                        margin-top: 20px;
+                    span {
+                        display: block;
+                        margin-top: 10px;
                         font-size: 20px;
                         color: #000;
                     }
-                    p:first-child {
+                    p {
                         font-weight: 100;
                         font-size: 15px;
                         font-family: "Open Sans";
@@ -62,13 +60,30 @@ $grey2:#6f6e6c;
                     }
                     &_socet {
                         margin: 0 auto;
+                        height: 100px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-around;
+                        a {
+                            img {
+                                width: 32px;
+                                object-fit: cover;
+                            }
+                        }
                     }
                 }
                 &:hover {
                     background: url(../img/our_team/bgr_team_cart.jpg);
                     h5,
-                    p {
+                    span,
+                    p,
+                    {
                         color: white;
+                    }
+                    a {
+                        img {
+                            filter: invert(100%);
+                        }
                     }
                 }
             }
