--- a/scss/team.scss
+++ b/scss/team.scss
@@ -21,6 +21,7 @@ $grey2:#6f6e6c;
             flex-wrap: wrap;
             &_cart {
                 width: 370px;
+                height: 530px;
                 border: 1px solid #cacaca;
                 background: #ffffff;
                 margin: 25px 12px 0;
