--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,12 @@
 @import url("reset.css");
+@import url("const.css");
+@import url("header.css");
 @import url("news.css");
 @import url("workflow.css");
 @import url("about.css");
 @import url("portfolio.css");
 @import url("team.css");
-@font-face {
-  font-family: 'Open-sans';
-  src: url(../fond/Open_Sans/OpenSans-Regular.ttf);
-}
-
-@font-face {
-  font-family: 'OpenSans-Bold';
-  src: url(../fond/Open_Sans/OpenSans-Bold.ttf);
-}
-
-@font-face {
-  font-family: 'OpenSans-ExtraBold';
-  src: url(../fond/Open_Sans/OpenSans-ExtraBold.ttf);
-}
-
-@font-face {
-  font-family: 'OpenSans-Light';
-  src: url(../fond/Open_Sans/OpenSans-Light.ttf.ttf);
-}
-
-* {
-  font-family: 'Open-sans', Arial, Helvetica, sans-serif;
-}
-
-h3 {
-  padding-top: 60px;
-  font-size: 30px;
-  text-transform: uppercase;
-  text-align: center;
-  font-family: 'OpenSans-Bold';
-}
-
-h1 {
-  font-family: 'OpenSans-Bold';
-}
-
-h5 {
-  font-size: 20px;
-  font-family: 'OpenSans-Bold';
-  text-transform: uppercase;
-}
-
-p {
-  margin-top: 15px;
-}
-
+@import url("contact.css");
 .content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -63,112 +20,4 @@ p {
 .slick-next,
 .slick-prev {
   width: 10%;
-}
-
-nav {
-  z-index: 1001;
-  position: fixed;
-  background-color: #ffffff;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 60px;
-}
-
-nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-nav ul li {
-  list-style-type: none;
-}
-
-nav ul li:after {
-  content: "\007C";
-  margin: 0 30px 0;
-}
-
-@media (max-width: 1024px) {
-  nav ul li:after {
-    margin: 0 20px 0;
-  }
-}
-
-nav ul li:last-child::after {
-  content: "";
-  margin: 0;
-}
-
-nav ul a {
-  color: #ffffff;
-  text-transform: uppercase;
-  text-decoration: none;
-  width: 664px;
-  height: 13px;
-  color: #000000;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 24px;
-  text-transform: uppercase;
-  padding: 5px 0 5px;
-}
-
-nav ul a:hover {
-  border-bottom: 3px solid #f4bb36;
-}
-
-nav ul a:active {
-  border-bottom: 2px solid #f4bb36;
-}
-
-@media (max-width: 768px) {
-  nav ul {
-    display: none;
-  }
-}
-
-.burger {
-  position: relative;
-  width: 30px;
-  height: 20px;
-  display: none;
-}
-
-.burger:before, .burger:after,
-.burger span {
-  content: "";
-  position: absolute;
-  background-color: #000;
-  width: 30px;
-  height: 4px;
-  -webkit-transition: all 0.1s ease 0s;
-  -o-transition: all 0.1s ease 0s;
-  transition: all 0.1s ease 0s;
-  border-radius: 2px;
-}
-
-.burger:before {
-  top: 0;
-}
-
-.burger:after {
-  bottom: 0;
-}
-
-.burger span {
-  top: 8px;
-}
-
-@media (max-width: 768px) {
-  .burger {
-    display: block;
-  }
 }
