--- a/scss/about.scss
+++ b/scss/about.scss
@@ -59,6 +59,7 @@
                   &_btn {
                       position: relative;
                       button {
+                          cursor: pointer;
                           outline: 0;
                           border: none;
                           color: white;
