--- a/scss/workflow.scss
+++ b/scss/workflow.scss
@@ -33,6 +33,7 @@ $grey: #414141;
                     margin: 30px 0 0 0;
                 }
                 &_img {
+                    cursor: pointer;
                     height: 54px;
                     width: 54px;
                     border: 1px solid black;
