--- a/scss/team.scss
+++ b/scss/team.scss
@@ -21,6 +21,7 @@ $grey2:#6f6e6c;
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
+            padding-bottom: 20px;
             &_cart {
                 width: 370px;
                 height: 530px;
