--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -13,6 +13,7 @@ $grey: #414141;
                 color: #3e2d35;
                 font-weight: 700;
                 margin-top: 10px;
+                text-transform: none;
             }
             p {
                 margin: 20px auto 0;
