--- a/scss/header.scss
+++ b/scss/header.scss
@@ -9,6 +9,9 @@ nav {
     justify-content: space-around;
     align-items: center;
     height: 60px;
+    @media (max-width: 768px) {
+        height: 40px;
+    }
     ul {
         display: flex;
         li {
@@ -47,6 +50,13 @@ nav {
         }
         @media (max-width: 768px) {
             display: none;
+        }
+    }
+    @media (max-width: 768px) {
+        .header_logo {
+            img {
+                height: 30px;
+            }
         }
     }
 }
