--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -69,6 +69,9 @@ $grey: #414141;
                     &_img {
                         min-width: 250px;
                         height: 300px;
+                        @media (max-width: 768px) {
+                            height: 200px;
+                        }
                         img {
                             width: 100%;
                             height: 100%;
