--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -93,3 +93,15 @@ $grey: #414141;
         }
     }
 }
+
+.ftr-copy {
+    background: #1e1e1e;
+    color: #6f6e6c;
+    height: 80px;
+    &_text {
+        display: flex;
+        justify-content: space-around;
+        padding: 25px 0;
+        span {}
+    }
+}
