--- a/scss/workflow.scss
+++ b/scss/workflow.scss
@@ -12,13 +12,13 @@ $grey: #414141;
             h3 {
                 color: $yel;
             }
-            p {
-                margin: 0 auto;
+            span {
+                display: block;
+                text-align: center;
                 color: $grey;
                 font-size: 15px;
                 font-weight: 700;
                 line-height: 24px;
-                text-align: center;
             }
         }
         &_processes {
