--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -38,12 +38,33 @@ $grey: #414141;
         textarea {
             height: 80px;
         }
+        button {
+            background: #f4bb36;
+            width: 170px;
+            height: 48px;
+            border-radius: 3px;
+            color: black;
+            align-self: flex-end;
+            margin-top: 10px;
+            border: none;
+            transition: 0.4s ease;
+            cursor: pointer;
+            &:hover {
+                // color: white;
+                letter-spacing: 0.5pt;
+            }
+            &:active {
+                color: white;
+                // letter-spacing: 0.5pt;
+            }
+        }
         @media (max-width: 768px) {
             width: 100%;
         }
     }
     &_sc-info {
-        padding: 0 0 0 50px;
+        // padding: 0 0 0 50px;
+        margin: 0 0 0 50px;
         @media (max-width: 768px) {
             // display: flex;
             // flex-direction: row;
@@ -84,11 +105,17 @@ $grey: #414141;
         &_img {
             display: flex;
             flex-direction: row;
-            img {
-                background: white;
+            a {
+                margin-right: 10px;
+                cursor: pointer;
                 height: 40px;
                 width: 40px;
-                margin-right: 10px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    background: white;
+                }
             }
         }
     }
@@ -101,7 +128,8 @@ $grey: #414141;
     &_text {
         display: flex;
         justify-content: space-around;
-        padding: 25px 0;
-        span {}
+        span {
+            padding: 27px 0 0;
+        }
     }
 }
