--- a/scss/header.scss
+++ b/scss/header.scss
@@ -6,46 +6,58 @@ nav {
     background-color: #ffffff;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 60px;
     @media (max-width: 1024px) {
         height: 40px;
-    }
-    ul {
-        display: flex;
-        li {
-            list-style-type: none;
-            &:after {
-                content: "\007C";
-                margin: 0 30px 0;
-                @media (max-width: 1024px) {
-                    margin: 0 20px 0;
-                }
-            }
-            &:last-child::after {
-                content: "";
-                margin: 0;
+        .header_logo {
+            margin-left: 20px;
+            img {
+                height: 30px;
             }
         }
-        a {
-            color: #ffffff;
-            text-transform: uppercase;
-            text-decoration: none;
-            width: 664px;
-            height: 13px;
-            color: #000000;
-            // font-family: "Open Sans", Arial, Helvetica, sans-serif;
-            font-size: 13px;
-            font-weight: 400;
-            line-height: 24px;
-            text-transform: uppercase;
-            padding: 5px 0 5px;
-            &:hover {
-                border-bottom: 3px solid $yel;
-            }
-            &:active {
-                border-bottom: 2px solid $yel;
+    }
+    @media (min-width: 1024px) {
+        justify-content: space-around;
+    }
+    .menu {
+        transition: all 0.5s ease 0s;
+        ul {
+            display: flex;
+            // margin-right: 30px;
+            li {
+                list-style-type: none;
+                &:after {
+                    content: "\007C";
+                    margin: 0 30px 0;
+                    @media (max-width: 1024px) {
+                        margin: 0 20px 0;
+                    }
+                }
+                &:last-child::after {
+                    content: "";
+                    @media (max-width: 768px) {
+                        margin: 0;
+                    }
+                }
+                a {
+                    color: #ffffff;
+                    text-transform: uppercase;
+                    text-decoration: none;
+                    color: #000000;
+                    font-size: 13px;
+                    font-weight: 400;
+                    line-height: 24px;
+                    text-transform: uppercase;
+                    padding: 5px 0 5px;
+                    &:hover {
+                        border-bottom: 3px solid $yel;
+                    }
+                    &:active {
+                        border-bottom: 2px solid $yel;
+                    }
+                }
             }
         }
         @media (max-width: 768px) {
@@ -61,11 +73,43 @@ nav {
     }
 }
 
+@media (max-width: 768px) {
+    .menu.active {
+        background-color: #ffffff;
+        position: absolute;
+        top: 40px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        overflow: auto;
+        ul {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            margin: 0;
+            li {
+                height: 20%;
+                a {
+                    display: block;
+                    margin: 5px;
+                    font-size: 16px;
+                }
+                &:after {
+                    content: none;
+                    margin: 0;
+                }
+            }
+        }
+    }
+}
+
 .burger {
     position: relative;
     width: 30px;
-    height: 20px;
-    // transition: all 0.5s ease 0s;
+    height: 14px;
+    margin-right: 30px;
+    // transition: all 0.1s ease 0s;
+    cursor: pointer;
     &:before,
     &:after,
     span {
@@ -73,9 +117,9 @@ nav {
         position: absolute;
         background-color: #000;
         width: 30px;
-        height: 4px;
+        height: 5px;
         transition: all 0.1s ease 0s;
-        border-radius: 2px;
+        border-radius: 3px;
     }
     &:before {
         top: 0;
@@ -84,10 +128,26 @@ nav {
         bottom: 0;
     }
     span {
-        top: 8px;
+        // top: 8px;
+        display: none;
     }
     display: none; //!!
     @media (max-width: 768px) {
         display: block;
+    }
+}
+
+.burger.active {
+    transform: rotate(90deg);
+    &:before {
+        top: 4px;
+        transform: rotate(45deg);
+    }
+    &:after {
+        bottom: 5px;
+        transform: rotate(-45deg);
+    }
+    span {
+        display: none;
     }
 }
