--- a/scss/news.scss
+++ b/scss/news.scss
@@ -11,14 +11,10 @@ $grey: #414141;
         margin-top: 65px;
         max-width: 100%;
         &_blocks {
-            // display: flex;
-            // justify-content: center;
-            // align-items: center;
             outline: none;
             &_text {
                 max-width: 1185px;
                 margin: 0 auto;
-                // margin-top: 120px;
                 text-align: center;
                 color: #ffffff;
                 padding: 0 10px 0;
@@ -60,32 +56,33 @@ $grey: #414141;
 .btn {
     padding: 8px 20px;
     font-size: 20px;
+    font-family: 'OpenSans-Bold';
     cursor: pointer;
     position: relative;
-    border: 2px solid $yel;
+    border: 2px solid #414141af;
     outline: none;
-    color: white;
+    color: $yel;
     background-color: transparent;
     margin: 20px;
-    white-space: nowrap;
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.36);
     &::after,
     &::before {
         content: "";
         position: absolute;
-        border: 2px solid $yel;
+        border: 2px solid #414141af;
         width: calc(100% - 5px);
         height: 20px;
         transition: 0.5s ease;
     }
     &::after {
-        top: -8px;
-        left: -8px;
+        top: -6px;
+        left: -6px;
         border-right: none;
         border-bottom: none;
     }
     &::before {
-        bottom: -8px;
-        right: -8px;
+        bottom: -6px;
+        right: -6px;
         border-left: none;
         border-top: none;
     }
@@ -94,22 +91,4 @@ $grey: #414141;
         width: calc(100% - 35px);
         height: 40px;
     }
-}
-
-.slick-dots li button {
-    border: 5px solid $yel;
-    border-radius: 50%;
-    opacity: 0.75;
-    width: 10px;
-    height: 10px;
-}
-
-.slick-dots li button:before {
-    content: "";
-    width: 10px;
-    height: 10px;
-}
-
-.slick-dots li.slick-active button {
-    opacity: 1;
 }
