--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,7 +1,7 @@
 $yel: #f4bb36;
 $grey: #414141;
 nav {
-    z-index: 1001;
+    z-index: 1000;
     position: fixed;
     background-color: #ffffff;
     width: 100%;
@@ -9,10 +9,12 @@ nav {
     justify-content: space-between;
     align-items: center;
     height: 60px;
+    transition: all 0.5s ease 0s;
     @media (max-width: 1024px) {
         height: 40px;
         .header_logo {
             margin-left: 20px;
+            z-index: 1002;
             img {
                 height: 30px;
             }
@@ -22,10 +24,10 @@ nav {
         justify-content: space-around;
     }
     .menu {
+        z-index: 999;
         transition: all 0.5s ease 0s;
         ul {
             display: flex;
-            // margin-right: 30px;
             li {
                 list-style-type: none;
                 &:after {
@@ -61,45 +63,46 @@ nav {
             }
         }
         @media (max-width: 768px) {
-            display: none;
+            background-color: #ffffff;
+            position: absolute;
+            top: -400px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            overflow: auto;
+            ul {
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                margin: 0;
+                li {
+                    height: 20%;
+                    a {
+                        display: block;
+                        margin: 5px;
+                        font-size: 16px;
+                    }
+                    &:after {
+                        content: none;
+                        margin: 0;
+                    }
+                }
+            }
         }
     }
-    @media (max-width: 1024px) {
-        .header_logo {
-            img {
-                height: 30px;
-            }
+}
+
+@media (max-width: 1024px) {
+    .header_logo {
+        img {
+            height: 30px;
         }
     }
 }
 
 @media (max-width: 768px) {
     .menu.active {
-        background-color: #ffffff;
-        position: absolute;
         top: 40px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        overflow: auto;
-        ul {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            margin: 0;
-            li {
-                height: 20%;
-                a {
-                    display: block;
-                    margin: 5px;
-                    font-size: 16px;
-                }
-                &:after {
-                    content: none;
-                    margin: 0;
-                }
-            }
-        }
     }
 }
 
@@ -110,6 +113,7 @@ nav {
     margin-right: 30px;
     // transition: all 0.1s ease 0s;
     cursor: pointer;
+    z-index: 1002;
     &:before,
     &:after,
     span {
