--- a/scss/header.scss
+++ b/scss/header.scss
@@ -119,7 +119,7 @@ nav {
     span {
         content: "";
         position: absolute;
-        background-color: #000;
+        background-color: $yel;
         width: 30px;
         height: 5px;
         transition: all 0.1s ease 0s;
