--- a/css/reset.css
+++ b/css/reset.css
@@ -43,7 +43,7 @@ dd {
 body {
     min-height: 100vh;
     scroll-behavior: smooth;
-    text-rendering: optimizeSpeed;
+    /* text-rendering: optimizeSpeed; */
     /* line-height: 1.5; */
     /* off  */
 }
