--- a/scss/about.scss
+++ b/scss/about.scss
@@ -1,90 +1,99 @@
-  .about {
-      background: url(../img/about/bgd_about.jpg) no-repeat center / cover;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      &_element {
-          padding: 0 10px 40px;
-          max-width: 1185px;
-          &_greeting {
-              text-align: center;
-              h3 {
-                  color: black;
-              }
-              h2 {
-                  color: #8e561b;
-                  font-size: 40px;
-                  font-weight: 100;
-                  line-height: 42px;
-              }
-              p {
-                  margin: 0 auto;
-                  color: #8e561b;
-                  font-size: 15px;
-                  font-style: italic;
-                  margin-top: 10px;
-              }
-          }
-          &_doit {
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              margin-top: 20px;
-              &_img {
-                  flex: 0 0 50%;
-                  position: relative;
-                  img {
-                      height: 100%;
-                      width: 100%;
-                      object-fit: cover;
-                      //   position: absolute;
-                      top: 0;
-                      left: 0;
-                  }
-              }
-              &_proces-history {
-                  max-width: 362px;
-                  margin-left: 30px;
-                  //   display: flex;
-                  h5 {
-                      color: #3e2d35;
-                      font-size: 20px;
-                      font-family: 'OpenSans-Bold';
-                  }
-                  p {
-                      color: #8e561b;
-                      font-size: 14px;
-                      margin-bottom: 35px;
-                  }
-                  &_btn {
-                      position: relative;
-                      button {
-                          cursor: pointer;
-                          outline: 0;
-                          border: none;
-                          color: white;
-                          width: 170px;
-                          height: 48px;
-                          background-color: #0c1a2d;
-                          font-size: 15px;
-                          text-transform: uppercase;
-                          border-radius: 3px;
-                      }
-                  }
-              }
-              @media (max-width: 768px) {
-                  flex-direction: column;
-                  &_proces-history {
-                      max-width: 768px;
-                      text-align: center;
-                      margin-top: 20px;
-                      margin-left: 0;
-                      &_btn {
-                          text-align: center;
-                          bottom: 20px;
-                      }
-                  }
-              }
-          }
-      }
-  }
+$yel: #f4bb36;
+.about {
+    background: url(../img/about/bgd_about.jpg) no-repeat center / cover;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    &_element {
+        padding: 0 10px 40px;
+        max-width: 1185px;
+        &_greeting {
+            text-align: center;
+            h3 {
+                color: black;
+            }
+            h2 {
+                color: #8e561b;
+                font-size: 40px;
+                font-weight: 100;
+                line-height: 42px;
+            }
+            p {
+                margin: 0 auto;
+                color: #8e561b;
+                font-size: 15px;
+                font-style: italic;
+                margin-top: 10px;
+            }
+        }
+        &_doit {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 20px;
+            &_img {
+                flex: 0 0 50%;
+                position: relative;
+                img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    //   position: absolute;
+                    top: 0;
+                    left: 0;
+                }
+            }
+            &_proces-history {
+                max-width: 362px;
+                margin-left: 30px;
+                //   display: flex;
+                h5 {
+                    color: #3e2d35;
+                    font-size: 20px;
+                    font-family: 'OpenSans-Bold';
+                }
+                p {
+                    color: #8e561b;
+                    font-size: 14px;
+                    margin-bottom: 35px;
+                }
+                &_btn {
+                    position: relative;
+                    button {
+                        cursor: pointer;
+                        outline: 0;
+                        border: none;
+                        color: white;
+                        width: 170px;
+                        height: 48px;
+                        background-color: #0c1a2d;
+                        font-size: 15px;
+                        text-transform: uppercase;
+                        border-radius: 3px;
+                        &:hover {
+                            transition: 0.4s ease;
+                            letter-spacing: 1pt;
+                        }
+                        &:active {
+                            transition: 0.1s ease;
+                            color: $yel;
+                        }
+                    }
+                }
+            }
+            @media (max-width: 768px) {
+                flex-direction: column;
+                &_proces-history {
+                    max-width: 768px;
+                    text-align: center;
+                    margin-top: 20px;
+                    margin-left: 0;
+                    &_btn {
+                        text-align: center;
+                        bottom: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
