--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -17,6 +17,7 @@ $grey: #414141;
             }
             p {
                 margin: 20px auto 0;
+                max-width: 850px;
                 font-size: 15px;
                 font-weight: 700;
                 line-height: 24px;
