--- a/scss/team.scss
+++ b/scss/team.scss
@@ -14,6 +14,8 @@ $grey2:#6f6e6c;
                 text-align: center;
                 color: $grey2;
                 font-size: 15px;
+                max-width: 850px;
+                margin: 0 auto;
                 font-style: italic;
             }
         }
