--- a/css/workflow.css
+++ b/css/workflow.css
@@ -14,8 +14,11 @@
   color: #f4bb36;
 }
 
-.workflow_element_greeting span {
+.workflow_element_greeting p {
   font-size: 15px;
+  font-weight: 400;
+  margin: 0 auto;
+  max-width: 850px;
   display: block;
   text-align: center;
   color: #414141;
@@ -76,6 +79,7 @@
 }
 
 .workflow_element_processes_process_text p {
+  margin-top: 20px;
   max-width: 253px;
   color: #414141;
   font-size: 14px;
