--- a/scss/about.scss
+++ b/scss/about.scss
@@ -22,6 +22,8 @@ $yel: #f4bb36;
                 margin: 0 auto;
                 color: #8e561b;
                 font-size: 15px;
+                font-weight: 300;
+                max-width: 850px;
                 font-style: italic;
                 margin-top: 10px;
             }
