--- a/scss/workflow.scss
+++ b/scss/workflow.scss
@@ -12,8 +12,11 @@ $grey: #414141;
             h3 {
                 color: $yel;
             }
-            span {
+            p {
                 font-size: 15px;
+                font-weight: 400;
+                margin: 0 auto;
+                max-width: 850px;
                 display: block;
                 text-align: center;
                 color: $grey;
@@ -50,6 +53,7 @@ $grey: #414141;
                         margin-top: 10px;
                     }
                     p {
+                        margin-top: 20px;
                         max-width: 253px;
                         color: $grey;
                         font-size: 14px;
