--- a/scss/const.scss
+++ b/scss/const.scss
@@ -40,7 +40,7 @@ h5 {
     text-transform: uppercase;
 }
 
-body {
-    margin: 0 auto;
-    max-width: 3560px;
-}
+// body {
+//     margin: 0 auto;
+//     max-width: 3560px;
+// }
