--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -26,13 +26,20 @@ $grey: #414141;
             margin-top: 10px;
             resize: none;
             width: 100%;
+            padding: 5px;
             &:focus {
-                border: 2px solid rgb(255, 255, 255);
+                // border: 1px solid rgb(255, 255, 255);
             }
             &::placeholder {
                 font-size: 14px;
                 font-style: italic;
                 padding: 0 10px 0px;
+            }
+            &:invalid:not(:placeholder-shown) {
+                border-color: red;
+            }
+            &:valid:not(:placeholder-shown) {
+                border-color: #c5c5c5;
             }
         }
         textarea {
