--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,3 +32,9 @@ $yel: #f4bb36;
 .slick-dots li.slick-active button {
     opacity: 1;
 }
+
+@media (max-width: 768px) {
+    body.lock {
+        overflow: hidden;
+    }
+}
