--- a/scss/header.scss
+++ b/scss/header.scss
@@ -5,10 +5,10 @@ nav {
     position: fixed;
     background-color: #ffffff;
     width: 100%;
+    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 60px;
     transition: all 0.5s ease 0s;
     @media (max-width: 1024px) {
         height: 40px;
@@ -67,16 +67,16 @@ nav {
             position: absolute;
             top: -400px;
             width: 100%;
+            // height: 100%;
             display: flex;
             justify-content: center;
-            overflow: auto;
+            // overflow: auto;
             ul {
                 display: flex;
                 flex-direction: column;
                 text-align: center;
                 margin: 0;
                 li {
-                    height: 20%;
                     a {
                         display: block;
                         margin: 5px;
