--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,17 @@
 .slick-next,
 .slick-prev {
   width: 10%;
+  z-index: 1;
+  height: 450px;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: #f4bb36;
+}
+
+.slick-prev {
+  z-index: 2;
 }
 
 .slick-dots li button {
